[package]
name = "bio-utils-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
fnv = { version = "1.0.7", features = [] }
lazy_static = { version = "1.4.0", features = [] }
rayon = "1.8.1"
regex = "1.10.3"
